--- a/src/components/classifieds-form/classifieds-form.html
+++ b/src/components/classifieds-form/classifieds-form.html
@@ -7,187 +7,13 @@
             <h5 class="mt-5 mb-4">Post a new Ad</h5>
           </div>
           <div class="col-12 mb-3">
-            <label>Select Brand <span>*</span></label>
+            <label>Select Category <span>*</span></label>
             <!-- prettier-ignore -->
-            <Select :options="brandsList" :error="newPostValidation.brand" errorText="Select Brand"
-              default="Select Brand" @selectValue="updatePostData('brand', $event)" />
+            <Select :options="categoryList"
+              default="Select Category" @selectValue="getCategoryOptions($event)" />
+              {{selectedCategory}}
           </div>
-          <div class="col-12 mb-3">
-            <label>Select Model <span>*</span></label>
-            <!-- prettier-ignore -->
-            <Select :options="modelsList" :error="newPostValidation.model" errorText="Select Model"
-              default="Select Model" @selectValue="updatePostData('model', $event)" />
-          </div>
-          <div class="col-12 mb-3">
-            <label>Select Make <span>*</span></label>
-            <!-- prettier-ignore -->
-            <Select :options="utils.yearDropdownValues()" :error="newPostValidation.make" errorText="Select Make"
-              default="Select Make" @selectValue="updatePostData('make', $event)" />
-          </div>
-          <div class="col-12 mb-3">
-            <label>Select Trim</label>
-            <!-- prettier-ignore -->
-            <Select :options="trimList" :error="newPostValidation.trim" errorText="Select Trim"
-              default="Select Trim" @selectValue="updatePostData('trim', $event)" />
-          </div>
-          <div class="col-12 mb-3">
-            <label>Description <span>*</span></label>
-            <!-- prettier-ignore -->
-            <InputText class="inputText" :error="newPostValidation.description" errorText="Enter Description"
-              placeholder="Enter Description" id="description" :value="newPost.description"
-              @value="updatePostData('description', $event)" />
-          </div>
-          <div class="col-12 mb-3">
-            <label>Place <span>*</span></label>
-            <!-- prettier-ignore -->
-            <InputText class="inputText" :error="newPostValidation.place" errorText="Enter Place"
-              placeholder="Enter Place" id="place" :value="newPost.place"
-              @value="updatePostData('place', $event)" />
-          </div>
-          <div class="col-12 mb-3">
-            <label>Price <span>*</span></label>
-            <!-- prettier-ignore -->
-            <InputText class="inputText" :error="newPostValidation.price" errorText="Enter Price"
-              placeholder="Enter Price" id="price" :value="newPost.price"
-              @value="updatePostData('price', $event)" />
-          </div>
-          <div class="col-12 mb-3">
-            <label>Distance <span>*</span></label>
-            <!-- prettier-ignore -->
-            <InputText class="inputText" :error="newPostValidation.distance" errorText="Enter Distance"
-              placeholder="Enter Distance" id="distance" :value="newPost.distance"
-              @value="updatePostData('distance', $event)" />
-          </div>
-
-          <div class="col-12 mb-3">
-            <label>Phone <span>*</span></label>
-            <!-- prettier-ignore -->
-            <InputText class="inputText" :error="newPostValidation.phone" errorText="Enter Phone Number"
-              placeholder="Enter Phone Number" id="phone" :value="newPost.phone"
-              @value="updatePostData('phone', $event)" />
-          </div>
-          <div class="col-12 mb-3">
-            <label>Email <span>*</span></label>
-            <!-- prettier-ignore -->
-            <InputText class="inputText" :error="newPostValidation.email" errorText="Enter Email Address"
-              placeholder="Enter Email Address" id="email" :value="newPost.email"
-              @value="updatePostData('email', $event)" />
-          </div>
-
-          <div class="col-12 mb-3">
-            <label>Display Picture</label>
-            <!-- prettier-ignore -->
-            <InputFile class="inputText" :error="newPostValidation.displayPicture"
-              errorText="Choose a display picture" type="file" accept="image/*" placeholder="Select a Display picture"
-              name="displayPicture" id="displayPicture" :value="newPost.displayPicture"
-              @value="updatePostData('displayPicture', $event)" />
-          </div>
-          <div class="col-12 mb-3">
-            <label
-              >Upload 10 gallery images (Minimum of 1 image)
-              <span>*</span></label
-            >
-            <!-- prettier-ignore -->
-            <InputFile class="inputText" :error="newPostValidation.galleryImages"
-              errorText="Choose gallery images (minimum 1)" type="file" accept="image/*" multiple
-              name="galleryImages[]" id="galleryImages" :value="newPost.galleryImages"
-              @value="updatePostData('galleryImages', $event)" />
-          </div>
-          <div class="col-12 mb-3">
-            <label>Select Exterior Color <span>*</span></label>
-            <!-- prettier-ignore -->
-            <Select :options="utils.colorDropDownValues()" :error="newPostValidation.exteriorColor" errorText="Select Exterior Color"
-              default="Select Exterior Color" @selectValue="updatePostData('exteriorColor', $event)" />
-          </div>
-          <div class="col-12 mb-3">
-            <label>Select Interior Color <span>*</span></label>
-            <!-- prettier-ignore -->
-            <Select :options="utils.colorDropDownValues()" :error="newPostValidation.interiorColor" errorText="Select Interior Color"
-              default="Select Interior Color" @selectValue="updatePostData('interiorColor', $event)" />
-          </div>
-          <div class="col-12 mb-3">
-            <label>Body Condition <span>*</span></label>
-            <!-- prettier-ignore -->
-            <InputText class="inputText" :error="newPostValidation.bodyCondition" errorText="Enter Body Condition"
-              placeholder="Enter Body Condition" id="bodyCondition" :value="newPost.bodyCondition"
-              @value="updatePostData('bodyCondition', $event)" />
-          </div>
-          <div class="col-12 mb-3">
-            <label>Mechanical Condition <span>*</span></label>
-            <!-- prettier-ignore -->
-            <InputText class="inputText" :error="newPostValidation.mechanicalCondition" errorText="Enter Mechanical Condition"
-              placeholder="Enter Mechanical Condition" id="mechanicalCondition" :value="newPost.mechanicalCondition"
-              @value="updatePostData('mechanicalCondition', $event)" />
-          </div>
-          <div class="col-12 mb-3">
-            <label>Select Warranty <span>*</span></label>
-            <!-- prettier-ignore -->
-            <Select :options="utils.yesNoDropdownValues()" :error="newPostValidation.warranty" errorText="Select Warranty"
-              default="Select Warranty" @selectValue="updatePostData('warranty', $event)" />
-          </div>
-          <div class="col-12 mb-3">
-            <label>Select No.of Doors <span>*</span></label>
-            <!-- prettier-ignore -->
-            <Select :options="utils.numberUpto10DropdownValues()" :error="newPostValidation.doors" errorText="Select No.of Doors"
-              default="Select No.of Doors" @selectValue="updatePostData('doors', $event)" />
-          </div>
-          <div class="col-12 mb-3">
-            <label>Select Seller Type <span>*</span></label>
-            <!-- prettier-ignore -->
-            <Select :options="utils.sellerTypes()" :error="newPostValidation.sellerType" errorText="Select Seller Type"
-              default="Select Seller Type" @selectValue="updatePostData('sellerType', $event)" />
-          </div>
-          <div class="col-12 mb-3">
-            <label>Select Body type <span>*</span></label>
-            <!-- prettier-ignore -->
-            <Select :options="utils.bodyType()" :error="newPostValidation.bodyType" errorText="Select Body type"
-              default="Select Body type" @selectValue="updatePostData('bodyType', $event)" />
-          </div>
-          <div class="col-12 mb-3">
-            <label>Select No.of Cylinders <span>*</span></label>
-            <!-- prettier-ignore -->
-            <Select :options="utils.numberUpto20DropdownValues()" :error="newPostValidation.cylinders" errorText="Select No.of Cylinders"
-              default="Select No.of Cylinders" @selectValue="updatePostData('cylinders', $event)" />
-          </div>
-          <div class="col-12 mb-3">
-            <label>Select Transmission type <span>*</span></label>
-            <!-- prettier-ignore -->
-            <Select :options="utils.transmissionTypes()" :error="newPostValidation.transmission" errorText="Select Transmission type"
-              default="Select Transmission type" @selectValue="updatePostData('transmission', $event)" />
-          </div>
-          <div class="col-12 mb-3">
-            <label>Regional Specs <span>*</span></label>
-            <!-- prettier-ignore -->
-            <InputText class="inputText" :error="newPostValidation.regionalSpecs" errorText="Enter Regional Specs"
-              placeholder="Enter Regional Specs" id="regionalSpecs" :value="newPost.regionalSpecs"
-              @value="updatePostData('regionalSpecs', $event)" />
-          </div>
-          <div class="col-12 mb-3">
-            <label>Select Fuel type <span>*</span></label>
-            <!-- prettier-ignore -->
-            <Select :options="utils.fuelTypes()" :error="newPostValidation.fuel" errorText="Select Fuel type"
-              default="Select Fuel type" @selectValue="updatePostData('fuel', $event)" />
-          </div>
-          <div class="col-12 mb-3">
-            <label>Select Horse Power <span>*</span></label>
-            <!-- prettier-ignore -->
-            <Select :options="utils.horsePowerOptions()" :error="newPostValidation.horsePower" errorText="Select Horse Power"
-              default="Select Horse Power" @selectValue="updatePostData('horsePower', $event)" />
-          </div>
-          <div class="col-12 mb-3">
-            <label>Select Steering Side <span>*</span></label>
-            <!-- prettier-ignore -->
-            <Select :options="utils.steeringSideOptions()" :error="newPostValidation.steeringSide" errorText="Select Steering Side"
-              default="Select Steering Side" @selectValue="updatePostData('steeringSide', $event)" />
-          </div>
-          <div
-            class="col-12 mt-3 mb-5 d-flex justify-content-between align-items-center button-wrapper"
-          >
-            <!-- prettier-ignore -->
-            <Button type="hollow" text="Cancel" class="mr-3" @click="cancelPost()" />
-            <!-- prettier-ignore -->
-            <Button type="primary" text="Submit Post" @click="submitPost()" />
-          </div>
+          <UsedCars v-if="selectedCategory==='Used Cars'"/>
         </div>
       </div>
     </div>
