--- a/src/components/classifieds-form/used-cars/used-cars.scss
+++ b/src/components/classifieds-form/used-cars/used-cars.scss
@@ -1,31 +1,3 @@
-.new-post-form-wrapper {
-  .container {
-    height: calc(100vh - 156px);
-    width: 600px;
-    max-width: 90%;
-
-    div[class*="col-12"] {
-      > label {
-        font-weight: 800;
-      }
-    }
-
-    .button-wrapper {
-      span {
-        color: $purple;
-        border-bottom: 1px dashed $purple;
-        cursor: pointer;
-        transition: 0.3s ease;
-        &:hover {
-          color: rgba($purple, 0.6);
-          border-bottom: 1px dashed rgba($purple, 0.6);
-        }
-      }
-    }
-  }
-  @media screen and (max-width: 991px) {
-    .container {
-      justify-content: center;
-    }
-  }
+.usedcars-wrapper {
+ width: 100%;
 }
