classified category updates

--- a/src/components/classifieds-form/classifieds-form.html
+++ b/src/components/classifieds-form/classifieds-form.html
@@ -16,6 +16,7 @@
           <Boats v-if="selectedCategory==='Boats'"/>
           <Motorcycles v-if="selectedCategory==='Motorcycles'"/>
           <Truck v-if="selectedCategory==='Truck'"/>
+          <NumberPlates v-if="selectedCategory==='Number Plates'"/>
         </div>
       </div>
     </div>
