--- a/src/components/post-list/post-list.html
+++ b/src/components/post-list/post-list.html
@@ -40,14 +40,14 @@
                   class="post-list-carousel"
                 >
                   <Slide
-                    v-for="(image, index) in post.gallery"
+                    v-for="(image, index) in post.gallery.split(',')"
                     v-bind:key="index"
                   >
-                    <span class="gallery-counter">{{index+1}}/{{post.gallery.length}}</span>
-                    <img :src="image" class="img-fluid" />
+                    <span class="gallery-counter">{{index+1}}/{{post.gallery.split(',').length}}</span>
+                    <img :src="getGalleryImagePath(image,post.imageFolder)" class="img-fluid" />
                   </Slide>
                 </Carousel>
-                <img :src="post.thumb" class="img-fluid post-list-image" @click="listView ? viewPostDetails(post) : ''" />
+                <img :src="getGalleryImagePath(post.thumb,post.imageFolder)" class="img-fluid post-list-image" @click="listView ? viewPostDetails(post) : ''" />
               </div>
                 <div class="post-details">
                   <div @click="listView ? viewPostDetails(post) : ''">
