--- a/src/components/common/sub-category-list/sub-category-list.html
+++ b/src/components/common/sub-category-list/sub-category-list.html
@@ -1,9 +1,7 @@
 <div class="boat-list-wrapper container mb-5">
   <div class="row">
     <div class="col-12 mt-4 mb-1">
-      <h5 class="heading">
-        Select SubCategories
-      </h5>
+      <h5 class="heading">Select SubCategories</h5>
     </div>
     <div class="col-12 my-3 search-wrapper">
       <InputText
