--- a/src/components/spare-filter/spare-filter.html
+++ b/src/components/spare-filter/spare-filter.html
@@ -13,7 +13,7 @@
       <div class="col-12 col-lg-3 filter-column">
         <label>Model</label>
         <!-- prettier-ignore -->
-        <Select :options="getAllCarModels" default="Select Model" @selectValue="getSelectInput" />
+        <Select :options="getAllModels" default="Select Model" @selectValue="getSelectInput" />
       </div>
       <div class="col-12 col-lg-3 filter-column">
         <label>Year of Make</label>
