--- a/src/components/classifieds-form/motorcycles/motorcycles.html
+++ b/src/components/classifieds-form/motorcycles/motorcycles.html
@@ -18,6 +18,12 @@
     @selectValue="updatePostData('model', $event)" />
   </div>
   <div class="col-12 mb-3">
+    <label>Select Trim</label>
+    <!-- prettier-ignore -->
+    <Select :options="trimList" :error="newPostValidation.trim" errorText="Select Trim" default="Select Trim"
+    @selectValue="updatePostData('trim', $event)" />
+  </div>
+  <div class="col-12 mb-3">
     <label>
       Select SubCategory
       <span>*</span>
@@ -158,7 +164,8 @@
     default="Select Seller Type" @selectValue="updatePostData('sellerType', $event)" />
   </div>
   <div
-    class="col-12 mt-3 mb-5 d-flex justify-content-between align-items-center button-wrapper" >
+    class="col-12 mt-3 mb-5 d-flex justify-content-between align-items-center button-wrapper"
+  >
     <!-- prettier-ignore -->
     <Button type="hollow" text="Cancel" class="mr-3" @click="cancelPost()" />
     <!-- prettier-ignore -->
