--- a/src/components/common/car-list/car-list.html
+++ b/src/components/common/car-list/car-list.html
@@ -32,7 +32,7 @@
     <template v-else>
       <div
         class="col-xs-12 col-lg-2 my-3 car-list-cont"
-        v-for="model in getAllCarModels"
+        v-for="model in getAllModels"
       >
         <div @click="getposts(model)" class="car-list">
           {{model}}
