--- a/src/components/post-detail-table/post-detail-table.html
+++ b/src/components/post-detail-table/post-detail-table.html
@@ -1,8 +1,11 @@
 <div class="post-detail-table-wrapper">
-  <ul v-if='selectedClassifiedCategory==="Used Cars"' class="overview-table mt-3 mb-4">
+  <ul
+    v-if='selectedClassifiedCategory==="used-cars"'
+    class="overview-table mt-3 mb-4"
+  >
     <li>
       <p>Brand</p>
-      <p>{{data.company}}</p>
+      <p>{{data.brand}}</p>
     </li>
     <li>
       <p>Model</p>
@@ -77,7 +80,10 @@
       <p>{{data.sellerType}}</p>
     </li>
   </ul>
-  <ul v-else-if='selectedClassifiedCategory==="Motorcycles"' class="overview-table mt-3 mb-4">
+  <ul
+    v-else-if='selectedClassifiedCategory==="motorcycles"'
+    class="overview-table mt-3 mb-4"
+  >
     <li>
       <p>Sub Category</p>
       <p>{{data.subcategory}}</p>
@@ -85,6 +91,18 @@
     <li>
       <p>Name</p>
       <p>{{data.name}}</p>
+    </li>
+    <li>
+      <p>Brand</p>
+      <p>{{data.brand}}</p>
+    </li>
+    <li>
+      <p>Model</p>
+      <p>{{data.model}}</p>
+    </li>
+    <li>
+      <p>Trim</p>
+      <p>{{data.trim}}</p>
     </li>
     <li>
       <p>Phone</p>
@@ -139,7 +157,10 @@
       <p>{{data.sellerType}}</p>
     </li>
   </ul>
-  <ul v-else-if='selectedClassifiedCategory==="Boats"' class="overview-table mt-3 mb-4">
+  <ul
+    v-else-if='selectedClassifiedCategory==="boats"'
+    class="overview-table mt-3 mb-4"
+  >
     <li>
       <p>Sub Category</p>
       <p>{{data.subCategory}}</p>
@@ -193,10 +214,13 @@
       <p>{{data.year}}</p>
     </li>
   </ul>
-  <ul v-else-if='selectedClassifiedCategory==="Truck"' class="overview-table mt-3 mb-4">
+  <ul
+    v-else-if='selectedClassifiedCategory==="truck"'
+    class="overview-table mt-3 mb-4"
+  >
     <li>
       <p>Sub Category</p>
-      <p>{{data.subcategory}}</p>
+      <p>{{data.subCategory}}</p>
     </li>
     <li>
       <p>Name</p>
@@ -233,7 +257,7 @@
     <li>
       <p>Warranty</p>
       <p>{{data.warranty}}</p>
-    </li>   
+    </li>
     <li>
       <p>Price</p>
       <p>{{data.price}}</p>
@@ -245,12 +269,15 @@
     <li>
       <p>Kilometers</p>
       <p>{{data.kilometers}}</p>
-    </li>    
+    </li>
   </ul>
-  <ul v-else-if='selectedClassifiedCategory==="Number Plates"' class="overview-table mt-3 mb-4">
+  <ul
+    v-else-if='selectedClassifiedCategory==="number-plates"'
+    class="overview-table mt-3 mb-4"
+  >
     <li>
       <p>Sub Category</p>
-      <p>{{data.subcategory}}</p>
+      <p>{{data.subCategory}}</p>
     </li>
     <li>
       <p>Name</p>
