--- a/src/components/post-filter/post-filter.html
+++ b/src/components/post-filter/post-filter.html
@@ -24,7 +24,7 @@
       <div class="col-12 col-lg-3 filter-column">
         <label>Model</label>
         <!-- prettier-ignore -->
-        <Select :options="getAllCarModels" default="Select Model" @selectValue="getSelectInput" />
+        <Select :options="getAllModels" default="Select Model" @selectValue="getSelectInput" />
       </div>
 
       <div class="col-12 col-lg-3 filter-column">
