--- a/src/views/spare-parts-details/spare-parts-details.html
+++ b/src/views/spare-parts-details/spare-parts-details.html
@@ -44,6 +44,7 @@
               :key="imageIndex"
               @click="index = imageIndex"
               :style="{ backgroundImage: 'url(' + image + ')' }"
+              :class="postData.gallery.length === 1 && 'w-100'"
             >
               <img :src="image" />
             </div>
