--- a/src/views/user-profile/user-profile.scss
+++ b/src/views/user-profile/user-profile.scss
@@ -9,6 +9,7 @@
     }
     img.profile {
       border-radius: 50%;
+      background-color: $white;
       width: 150px;
       border: 1px dashed $purple;
       box-shadow: inset 0 0 10px 5px rgba(0, 0, 0, 0.1);
